syntax = "proto3";

option csharp_namespace = "GrpcServer";

package grpcserver;

service OrdersService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  
  rpc AddProductToOrder (AddProductToOrderRequest) returns (AddProductToOrderResponse);
  
  rpc RemoveProductFromOrder (RemoveProductFromOrderRequest) returns (RemoveProductFromOrderResponse);
  
  rpc TransferOrderToProcessing (TransferOrderToProcessingRequest) returns (TransferOrderToProcessingResponse);
  
  rpc FulfillOrder (FulfillOrderRequest) returns (FulfillOrderResponse);
  
  rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
  
  rpc GetOrderHistory (GetOrderHistoryRequest) returns (GetOrderHistoryResponse);
}

message CreateOrderRequest {
  string created_by = 1;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message AddProductToOrderRequest {
  int64 order_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message AddProductToOrderResponse {}

message RemoveProductFromOrderRequest {
  int64 order_id = 1;
  int64 product_id = 2;
}

message RemoveProductFromOrderResponse {}

message TransferOrderToProcessingRequest {
  int64 order_id = 1;
}

message TransferOrderToProcessingResponse {}

message FulfillOrderRequest {
  int64 order_id = 1;
}

message FulfillOrderResponse {}

message CancelOrderRequest {
  int64 order_id = 1;
}

message CancelOrderResponse {}

message GetOrderHistoryRequest {
  int64 order_id = 1;
  int32 page_index = 2;
  int32 page_size = 3;
}

message GetOrderHistoryResponse {
  repeated OrderHistoryItem order_history = 1;
}

message OrderHistoryItem {
  int64 id = 1;
  string action = 2;
  string timestamp = 3;
}