syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcServer";

package order;

service OrdersService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  
  rpc AddProductToOrder (AddProductToOrderRequest) returns (google.protobuf.Empty);
  
  rpc RemoveProductFromOrder (RemoveProductFromOrderRequest) returns (google.protobuf.Empty);
  
  rpc TransferOrderToProcessing (TransferOrderToProcessingRequest) returns (google.protobuf.Empty);
  
  rpc FulfillOrder (FulfillOrderRequest) returns (google.protobuf.Empty);
  
  rpc CancelOrder (CancelOrderRequest) returns (google.protobuf.Empty);
  
  rpc GetOrderHistory (GetOrderHistoryRequest) returns (GetOrderHistoryResponse);
}

message CreateOrderRequest {
  string created_by = 1;
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message AddProductToOrderRequest {
  int64 order_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message RemoveProductFromOrderRequest {
  int64 order_id = 1;
  int64 product_id = 2;
}

message TransferOrderToProcessingRequest {
  int64 order_id = 1;
}

message FulfillOrderRequest {
  int64 order_id = 1;
}

message CancelOrderRequest {
  int64 order_id = 1;
}

message GetOrderHistoryRequest {
  int64 order_id = 1;
  int32 page_index = 2;
  int32 page_size = 3;
}

message GetOrderHistoryResponse {
  repeated OrderHistoryItem order_history = 1;
}
message OrderHistoryItem {
  int64 id = 1;
  int64 order_id = 2;
  string created_at = 3;
  OrderHistoryItemKind kind = 4;
  OrderHistoryData payload = 5;
}

message OrderHistoryData {
  int64 order_id = 1;
  OrderHistoryItemKind kind = 2;
  string message = 3;
}

enum OrderHistoryItemKind {
  CREATED = 0;
  ITEM_ADDED = 1;
  ITEM_REMOVED = 2;
  STATE_CHANGED = 3;
}
